<resources>
    <string name="app_name">Health Monitor</string>
    <string name="populatedb">Populate DB</string>
    <string name="cleardb">Clear DB</string>
    <string name="showbpreading">Show BP Readings</string>
    <string name="listintro">This is List BP Reading Activity</string>
    <string name="normalbp">Generate Normal BP</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="dummybpinfo">This Activity Generates Dummy BP Readings</string>
    <string name="dummybp">Generate Dummy BP Reading</string>
    <string name="getallbpreading">Print All Reading on Console</string>
    <string name="morninglbl">Morning</string>
    <string name="afternoonlbl">Afternoon</string>
    <string name="eveninglbl">Evening</string>
    <string name="systolicplch">iSys</string>
    <string name="diastolicplc">iDia</string>
    <string name="addBPReading">Add BP Reading</string>
    <string name="addbptitle">Add BP Reading</string>
    <string name="datelbl">Date:</string>
    <string name="typelbl">Type:</string>
    <string name="systoliclbl">Systolic:</string>
    <string name="diastoliclbl">Diastolic:</string>
    <string name="submitbtnlbl">Submit</string>
    <string name="systolichint">120</string>
    <string name="diastolichint">80</string>
    <string name="filterBPReading">Filter BP Reading</string>
    <string name="filterbpinfo">This Activity filter BP Readings</string>
    <string name="filterNone">All Reading</string>
    <string name="filterMonth">Current Month</string>
    <string name="filterWeek">Current Week</string>
    <string name="filterCustom">Custom Period</string>
    <string name="filterSpecific">Selected Date</string>
    <string name="customstartdatelbl">Start:</string>
    <string name="customenddatelbl">End:</string>
    <string name="customfilterbtn">Get Readings</string>
    <string name="showweights">Show Weight Records</string>
    <string name="listweighttitle">List Weight Record</string>
    <string name="dummyweight">Generate Dummy Weight Records</string>
    <string name="dummyweightinfo">This Activity Generates Dummy Weight Readings</string>
    <string name="addWeightRecord">Add Weight Record</string>
    <string name="addweighttitle">Add Weight Record</string>
    <string name="weight">Weight</string>
    <string name="weighthint">Weight</string>
    <string name="homettitle">HOME</string>
    <string name="successmsg">"Successfully inserted reading"</string>
    <string name="specificdatelbl">Select Date</string>
    <string name="listBP">List BP Reading</string>
    <string name="showappts">Show Appointment Records</string>
    <string name="dummyappointments">Generate Dummy Appointment Records</string>
    <string name="dummyapptinfo">This Activity Generates Dummy Appointment</string>
    <string name="listAppointment">List Appointments</string>
    <string name="timeblb">Time</string>
    <string name="locationlbl">Location</string>
    <string name="purposelbl">Purpose</string>
    <string name="timelbl">Select Time</string>
    <string name="apptpurposehint">Purpose of Appointment</string>
    <string name="addAppointment">Add Appointment</string>
    <string name="saveAppointment">Save Appointment</string>
    <string name="editAppointment">Edit Appointment</string>
    <string name="dummyreminder">Generate Dummy Reminder</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragapptcompleted">This is Completed Appointment</string>
    <string name="fragapptupcoming">This is Upcoming Appointment</string>


    <!-- Alarm -->
    <string name="stop_alarm">Stop Alarm</string>
    <string name="start_alarm">Start Alarm</string>
    <string name="edit_text_hint">Input your Alarm time</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="label">Select your Alarm input type from below:</string>


    <!-- BP Reminder -->
    <string name="morbpreminder">Morning Reminder</string>
    <string name="aftbpreminder">Afternoon Reminder</string>
    <string name="evebpreminder">Evening Reminder</string>
    <string name="saveReminder">Save BP Reminder</string>
    <string name="setreminder">Set Reminder</string>

    <!--Appointment Contact-->
    <string name="etHint">Enter Relationship here</string>
    <string name="btnCommit">Confirm Relation</string>
    <string name="tvChoice">None selected</string>
    <string name="addcontact">Add Contact</string>

</resources>
