<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/dummyBP"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/dummybp"
        app:showAsAction="never" />

    <item
        android:id="@+id/dummyWeight"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/dummyweight"
        app:showAsAction="never" />

    <item
        android:id="@+id/dummyAppointment"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/dummyappointments"
        app:showAsAction="never" />

    <item
        android:id="@+id/dummyReminder"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/dummyreminder"
        app:showAsAction="never" />

</menu>