<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWeightRecord"
    android:orientation="vertical">

    <!--Title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/titlepicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:padding="5dp"
            android:src="@drawable/appointment" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical|center"
            android:padding="0dp"
            android:paddingTop="0dp"
            android:text="@string/listAppointment"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp">

        <!-- Date -->
        <TableRow android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datelbl"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvApptDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <!-- Time -->
        <TableRow android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timeblb"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvApptTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <!-- Location -->
        <TableRow android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locationlbl"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvApptLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <!-- Purpose -->
        <TableRow android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purposelbl"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvApptPurpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

</LinearLayout>