<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BPReminderActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/titlepicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:padding="5dp"
            android:src="@drawable/blood_pressure" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical|center"
            android:padding="0dp"
            android:paddingTop="0dp"
            android:text="@string/listBP"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp">

    <!-- Morning Reminder-->
        <TableRow
            android:paddingTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/morbpreminder" />

            <Spinner
                android:id="@+id/spinnerMorRem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

    <!-- Afternoon Reminder-->
        <TableRow android:paddingTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/aftbpreminder" />

            <Spinner
                android:id="@+id/spinnerAftRem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

    <!-- Evening Reminder-->
        <TableRow android:paddingTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/evebpreminder" />

            <Spinner
                android:id="@+id/spinnerEveRem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

    </TableLayout>


</LinearLayout>