<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:id="@+id/cv">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>
                <!--Date Row-->
                <TextView
                    android:id="@+id/bpreadingdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""/>

            </TableRow>

            <TableRow>

                <!--Labels-->
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvMorning"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:includeFontPadding="true"
                            android:text="@string/morninglbl"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>
                        <!-- Morning column -->
                        <TextView
                            android:id="@+id/tvMorningSys"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:text=""/>

                        <TextView
                            android:id="@+id/tvMorningDia"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:text=""/>
                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvAfternoon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/afternoonlbl"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>
                        <!-- Afternoon Column-->
                        <TextView
                            android:id="@+id/tvAfternoonSys"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/tvAfternoonDia"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:textSize="12sp" />
                    </TableRow>

                </TableLayout>


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvEvening"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/eveninglbl"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>
                        <!-- Evening Column-->
                        <TextView
                            android:id="@+id/tvEveningSys"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/tvEveningDia"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:textSize="12sp" />

                    </TableRow>

                </TableLayout>
            </TableRow>


        </TableLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>